--- a/.local/share/themes/gotham/waybar.css
+++ b/.local/share/themes/gotham/waybar.css
@@ -1,10 +1,12 @@
-@define-color color #599caa;
-@define-color background #081f2d;
-@define-color workspaces-focused-color #33859d;
-@define-color workspaces-urgent-color #d26939;
+@import "colors.css";
+
+@define-color color @base04;
+@define-color background @base01;
+@define-color workspaces-focused-color @base0A;
+@define-color workspaces-urgent-color @base08;
 @define-color workspaces-hover-bg @background;
 @define-color workspaces-hover-color @workspaces-focused-color;
-@define-color mode-bg #edb54b;
-@define-color clock-bg #093748;
-@define-color clock-color @workspaces-focused-color;
-@define-color stats-color @workspaces-focused-color;
+@define-color mode-bg @base02;
+@define-color clock-bg @base02;
+@define-color clock-color @base04;
+@define-color stats-color @base04;
